# kinect_description

./: CMakeLists.txt  README.md  package.xml
urdf/: kinect.urdf.xacro  kinect_macro.xacro
