<?xml version="1.0"?>
<package format="3">
  <name>kinect_description</name>
  <version>1.0.0</version>
  <description>Xacro Kinect v1 description including camera frames</description>
  <author email="beek@robot-rose.nl">Loy van Beek</author>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>BSD3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>  
</package>
